[gd_scene load_steps=12 format=2]

[ext_resource path="res://levels/_titlescreen/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/visuals/map/background/huge_background.jpg" type="Texture" id=2]
[ext_resource path="res://other/Particles2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/YeonSung-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/visuals/gui/title_screen/play_button.png" type="Texture" id=5]
[ext_resource path="res://assets/visuals/gui/title_screen/play_button_pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/visuals/gui/title_screen/settings_button.png" type="Texture" id=7]
[ext_resource path="res://assets/visuals/gui/title_screen/settings_button_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/visuals/gui/title_screen/quit_button.png" type="Texture" id=9]
[ext_resource path="res://assets/visuals/gui/title_screen/quit_button_pressed.png" type="Texture" id=10]









[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 4 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
margin_left = -1152.0
margin_top = -704.0
margin_right = 4848.0
margin_bottom = 3296.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
stretch_mode = 3

[node name="Particles2D" parent="." instance=ExtResource( 3 )]
position = Vector2( 384, 0 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_top = 64.0
margin_right = 720.0
margin_bottom = 777.0
custom_constants/separation = 250

[node name="Title" type="Label" parent="VBoxContainer2"]
margin_right = 720.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 0
text = "Freezing
Adventure"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
margin_top = 511.0
margin_right = 720.0
margin_bottom = 713.0
size_flags_horizontal = 3
custom_constants/separation = 30

[node name="Play" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
margin_right = 720.0
margin_bottom = 86.0
alignment = 1

[node name="PlayButton" type="TextureButton" parent="VBoxContainer2/VBoxContainer/Play"]
margin_left = 174.0
margin_right = 546.0
margin_bottom = 86.0
focus_mode = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
stretch_mode = 2

[node name="Settings" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
editor/display_folded = true
visible = false
margin_top = 116.0
margin_right = 720.0
margin_bottom = 202.0
alignment = 1

[node name="SettingsButton" type="TextureButton" parent="VBoxContainer2/VBoxContainer/Settings"]
margin_left = 174.0
margin_right = 546.0
margin_bottom = 86.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
stretch_mode = 2

[node name="Quit" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
margin_top = 116.0
margin_right = 720.0
margin_bottom = 202.0
alignment = 1

[node name="QuitButton" type="TextureButton" parent="VBoxContainer2/VBoxContainer/Quit"]
margin_left = 174.0
margin_right = 546.0
margin_bottom = 86.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
stretch_mode = 2
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/Play/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/Settings/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/Quit/QuitButton" to="." method="_on_QuitButton_pressed"]
